--- a/Enabling_31_html/Enabling_31.html
+++ b/Enabling_31_html/Enabling_31.html
@@ -51,8 +51,8 @@
                                                  <img id="stageImg0" class="roundCorners image"></img>
                                              </div>
                                              <div style="borderx:1px solid purple; width:270px; height:100px; float:left;margin-top:10px;">
-                                                <div id="word0" class="roundCorners" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
-                                                <div id="audio0" class="roundCorners " style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
+                                                <div id="word0" class="roundCorners item_word" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
+                                                <div id="audio0" class="roundCorners item_audio" style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
                                                            <a href="javascript:;" onMouseOut="MM_swapImage('playBtn_s0','','../common/Library/images/playBtn_s1.png',1)"
             			                                   onMouseDown="MM_swapImage('playBtn_s0','','../common/Library/images/playBtn_s3.png',1)"
             			                                   onMouseUp="MM_swapImage('playBtn_s0','','../common/Library/images/playBtn_s2.png',1);"
@@ -77,8 +77,8 @@
                                                  <img id="stageImg1" class="roundCorners image"></img>
                                              </div>
                                              <div style="borderx:1px solid purple; width:270px; height:100px; float:left;;margin-top:10px;">
-                                                <div id="word1" class="roundCorners" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
-                                                <div id="audio1" class="roundCorners" style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
+                                                <div id="word1" class="roundCorners item_word" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
+                                                <div id="audio1" class="roundCorners item_audio" style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
                                                 
                                                            <a href="javascript:;" onMouseOut="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s1.png',1)"
             			                                   onMouseDown="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s3.png',1)"
@@ -105,8 +105,8 @@
                                                 <img id="stageImg2" class="roundCorners image"></img>
                                          </div>
                                          <div style="borderx:1px solid purple; width:270px; height:100px; float:left;;margin-top:10px;">
-                                                <div id="word2" class="roundCorners" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
-                                                <div id="audio2" class="roundCorners" style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
+                                                <div id="word2" class="roundCorners item_word" style="width:170px; height:30px;  margin-top: 15px; borderx:solid 1px blue;float:left;"></div>
+                                                <div id="audio2" class="roundCorners item_audio" style="width:51px;  height:30px;  margin-top: 5px; borderx:solid 1px blue;float:right;">
                                                            <a href="javascript:;" onMouseOut="MM_swapImage('playBtn_s2','','../common/Library/images/playBtn_s1.png',1)"
             			                                   onMouseDown="MM_swapImage('playBtn_s2','','../common/Library/images/playBtn_s3.png',1)"
             			                                   onMouseUp="MM_swapImage('playBtn_s2','','../common/Library/images/playBtn_s2.png',1);"
