WarmUp_08_html -Detatched WarmUp 7 code from WarmUp 8 because in FF + Windows you can not load xml from a relative path outside of the directory you launched the activity from. WarmUp_07_html -Added additional styling.

--- a/WarmUp_08_html/index.html
+++ b/WarmUp_08_html/index.html
@@ -1,8 +1,6 @@
 <html>
 <body> 
-	<p>Note- This project currently relies on WarmUp_07_html. All links
-		below require that WarmUp_07_html be a sibling directories.</p>
-	<a href="../WarmUp_07_html/WarmUp_07.html?mediaPath=../WarmUp_08_html/sampleData/&xmlFilename=../WarmUp_08_html/sampleData/WarmUp_08_sampleData.xml">WarmUp 8- RTL</a><br />
-	<a href="../WarmUp_07_html/WarmUp_07.html?mediaPath=../WarmUp_08_html/sampleData/&xmlFilename=../WarmUp_08_html/sampleData/WarmUp_08_sampleData_english.xml">WarmUp 8- English</a><br />
+	<a href="WarmUp_08.html?mediaPath=sampleData/&xmlFilename=sampleData/WarmUp_08_sampleData.xml">WarmUp 8- RTL</a><br />
+	<a href="WarmUp_08.html?mediaPath=sampleData/&xmlFilename=sampleData/WarmUp_08_sampleData_english.xml">WarmUp 8- English</a><br />
 </body>
 </html>
