--- a/Enabling_05_html/Enabling_05.html
+++ b/Enabling_05_html/Enabling_05.html
@@ -16,6 +16,8 @@
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+		<script src="../common/js/jquery.mCustomScrollbar.js"></script>		
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -29,10 +31,8 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd" class="noSelect">Enabling 05 | Translation Match (Puzzle)</h3>
-		<div class="activity_description" class="noSelect">To activate the audio, click on a 
-				Target Language in the left column. Listen to the phrase. 
-				Drag the English word from</div>
+		<h3 class="activity_hd" class="noSelect"></h3>
+		<div class="activity_description" class="noSelect"></div>
 		
 		<div id="main" class="noSelect">
 			<div id="dropTargets">
@@ -131,15 +131,15 @@
 					<span id="dragBubbleText_6" class="dragBubbleText noSelect">Six</span>
 				</div>				
 			</div>
-		<div id="feedback" >
-			<h2 id="feedbackHeader" class="noSelect">Set completed</h2>
+			<div id="feedback" >
+				<h2 id="feedbackHeader" class="noSelect">Set completed</h2>
 				<p id="feedbackText" class="noSelect">Set completed text</p>
-			<button id="feedbackBtn" class="noSelect" onclick="{closeFeedback();}">Ok</button>
-		</div>
-		<div id="container_setDiv" class="btn-group noSelect">
-			<div id="setTitle" class="bootstrapLabel btn_set noSelect">SET:</div>
-			<div id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</div>
-		</div>
+				<button id="feedbackBtn" class="noSelect" onclick="{closeFeedback();}">Ok</button>
+			</div>
+			<div id="container_setDiv" class="btn-group noSelect">
+				<div id="setTitle" class="bootstrapLabel btn_set noSelect">SET:</div>
+				<div id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</div>
+			</div>
 			<div id="clickGuard" ></div>
 		</div>
 			
