--- a/Enabling_04_html/Enabling_04.html
+++ b/Enabling_04_html/Enabling_04.html
@@ -48,7 +48,7 @@
 		</div>
 		
 		<div id="main">
-	        <div id = "carousel1" >            
+	        <div id = "carousel1" style="width:750px;">            
 	        </div>
 	        
 	        <div id="nextBtnDiv"> 
