--- a/Enabling_04_html/index.html
+++ b/Enabling_04_html/index.html
@@ -3,6 +3,8 @@
 		
 <a href="Enabling_04.html">Enabling 4 - Default sampleData</a><br />
 		<a href="Enabling_04.html?cssFilename=styles/Enabling_04_dliLearn.css">Enabling 4 - DliLearn style</a><br />
+		<a href="Enabling_04.html?&xmlFilename=sampleData/enabling04_noNamespaces_23Items.xml">Enabling 4- num Items (23)</a><br />
+		<a href="Enabling_04.html?&xmlFilename=sampleData/enabling04_noNamespaces_maxItems.xml">Enabling 4- max Items (46)</a><br />
 		<a href="Enabling_04.html?cssFilename=styles/Enabling_04_dliLearn.css&student=instructor@gmail.com&language=ja&lesson=2&activity=1&activityType=cl&logMode=test">Enabling 4 - DliLearn style. Homework logging.</a><br />
 		<a href="Enabling_04.html?mediaPath2=sampleData/ja_h01/&xmlFilename=sampleData/ja_h01_02.xml&cssFilename=styles/Enabling_04_dliLearn.css">Japanese Test</a>
 	</body>
