--- a/Enabling_29_html/Enabling_29.html
+++ b/Enabling_29_html/Enabling_29.html
@@ -4,6 +4,7 @@
 	<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 
 	<title>Enabling 29 HTML</title> <script src="../common/js/AC_OETags.js"></script>
 
