RTLScramble_html -Added mCustomScrollbar -Consolidated and cleaned up the code a bit -Added fixes for IE9 -Added RTL sample data -Stlyed Feedback box to be more inline with the other activities.

--- a/RTLScramble_html/index.html
+++ b/RTLScramble_html/index.html
@@ -1,5 +1,8 @@
 <html>
 	<body>
 		<a href="RTLScramble.html">RTLScramble - Default sampleData</a><br />
+		<a href="RTLScramble.html?debug=true">RTLScramble - Default sampleData debug</a><br />
+		<a href="RTLScramble.html?xmlFilename=sampleData/RTLScramble_sampleData_rtl.xml">RTLScramble - RTL sampleData</a><br />
+		<a href="RTLScramble.html?debug=true&xmlFilename=sampleData/RTLScramble_sampleData_rtl.xml">RTLScramble - RTL sampleData debug</a><br />
 	</body>
 </html>
