RTLScramble_html -Adding a partial fix for issues with the activity on the IPad.

--- a/RTLScramble_html/RTLScramble.html
+++ b/RTLScramble_html/RTLScramble.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script>-->
+	
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		
@@ -65,7 +67,7 @@
 			</div>
 			
 			<div id="word_snippet">
-				<div class="wordContainer" targetWord="">
+				<div class="wordContainer" targetWord="" ontouchstart="touchStart()">
 					<div onclick="playAudio(this)" class="playBtnLTR"></div>
 					<div class="spacer"> </div>
 					
