WarmUp_04_html -Fix for problem where xml file has a number of items not divisible by the number of drop boxes.

--- a/WarmUp_04_html/index.html
+++ b/WarmUp_04_html/index.html
@@ -3,5 +3,7 @@
 		<a href="WarmUp_04.html">WarmUp 4 - Default sampleData</a><br />
 		<a href="WarmUp_04.html?cssFilename=styles/WarmUp_04_dliLearn.css">WarmUp 4 - DliLearn style</a><br />
 		<a href="WarmUp_04.html?cssFilename=styles/WarmUp_04_dliLearn.css&student=instructor@gmail.com&language=ja&lesson=2&activity=1&activityType=cl&logMode=test">WarmUp 04 - DliLearn style. Homework logging.</a><br />
+		<a href="WarmUp_04.html?xmlFilename=sampleData/ub_01_01_02_02.xml&cssFilename=styles/WarmUp_04_dliLearn.css">WarmUp 4 - Turkmen sample</a><br />
+
 	</body>
 </html>
