RTLScramble_html -Fixed issue with console not being defined in IE9 -Updated style so that letters are "noSelect" -Minor changes to sample data

--- a/RTLScramble_html/RTLScramble.html
+++ b/RTLScramble_html/RTLScramble.html
@@ -62,7 +62,7 @@
 							<div class="leftDrop"></div>
 							<div class="rightDrop"></div>
 						</div>
-						<div class="letter"></div>
+						<div class="letter" class="noSelect"></div>
 					</div>
 			</div>
 			
