--- a/RTLScramble_html/RTLScramble.html
+++ b/RTLScramble_html/RTLScramble.html
@@ -37,9 +37,13 @@
 		</div>
 
 		<div id="container_setDiv" class="roundCorners noSelect" >
+			<div id="numAnswered">
+				<div id="numTitle" class="noSelect">ANSWERED</div>
+				<div id="numText" class="noSelect">1/3</div>
+			</div>
 			<div id="id_setDiv" class="roundCorners">
-				<div id="setTitle" class="bootstrapLabel btn_set noSelect">SET</div>
-				<div id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</div>				
+				<div id="tsetTitle" class="noSelect">SET</div>
+				<div id="tsetText" class="noSelect">1/3</div>				
 			</div>
 			<div id="id_prev_next_div" class="btn-group">
 				<button class="btn btn_prev" id="set_prev" title="prev" onclick="{prevClick();}">Prev</button>
@@ -67,11 +71,11 @@
 			</div>
 			
 			<div id="word_snippet">
-				<div class="wordContainer" targetWord="" ontouchstart="touchStart()">
+				<div class="wordContainer" targetWord="" ontouchstart="touchStart(this)">
 					<div onclick="playAudio(this)" class="playBtnLTR"></div>
-					<div class="spacer"> </div>
+					<div class="spacer firstSpacer"> </div>
 					
-					<div class="spacer"> </div>
+					<div class="spacer lastSpacer"> </div>
 					<div class="word"></div>
 					<div onclick="playAudio(this)" class="playBtnRTL"></div>
 					<div class="wordClickGuard"></div>
