--- a/WarmUp_04_html/WarmUp_04.html
+++ b/WarmUp_04_html/WarmUp_04.html
@@ -12,6 +12,8 @@
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
 		
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+		
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
@@ -19,6 +21,8 @@
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
+
+		<script src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="WarmUp_04.js"></script>
 	</head>
@@ -50,8 +54,10 @@
 			</div>
 			
 			<div id="feedback" >
-				<h2 id="feedbackHeader">Set completed</h2>
-				<p id="feedbackText">Set completed text</p>
+				<div id="feedbackTextContainer">
+					<h2 id="feedbackHeader">Set completed</h2>
+					<p id="feedbackText">Set completed text</p>
+				</div>
 				<button id="feedbackBtn" onclick="{closeFeedback();}">Ok</button>
 			</div>
 	
