--- a/WarmUp_04_html/WarmUp_04.html
+++ b/WarmUp_04_html/WarmUp_04.html
@@ -26,7 +26,7 @@
 		
 		<script src="WarmUp_04.js"></script>
 	</head>
-	<body>
+	<body class="noSelect">
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
 
 		<h3 class="activity_hd">Warm-up 04 | Flash Card</h3>
@@ -38,10 +38,10 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<div id="main" class="roundCorners">
-			<div id="stage" class="roundCorners">
-				<img id="stageImg" class="roundCorners"></img>
-				<div id="drop" class="roundCorners">
+		<div id="main" class="roundCorners noSelect">
+			<div id="stage" class="roundCorners noSelect">
+				<img id="stageImg" class="roundCorners noSelect"></img>
+				<div id="drop" class="roundCorners noSelect">
 					<div id="playBtn1" class="playBtn"> <a href="javascript:;" onMouseOut="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s1.png',1)" 
 							onMouseDown="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s3.png',1);playAudio();"
 							onMouseUp="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s2.png',1)" 
@@ -53,17 +53,17 @@
 				</div>
 			</div>
 			
-			<div id="feedback" >
-				<div id="feedbackTextContainer">
-					<h2 id="feedbackHeader">Set completed</h2>
-					<p id="feedbackText">Set completed text</p>
+			<div id="feedback" class="noSelect">
+				<div id="feedbackTextContainer" class="noSelect">
+					<h2 id="feedbackHeader" class="noSelect">Set completed</h2>
+					<p id="feedbackText" class="noSelect">Set completed text</p>
 				</div>
-				<button id="feedbackBtn" onclick="{closeFeedback();}">Ok</button>
+				<button id="feedbackBtn" class="noSelect" onclick="{closeFeedback();}">Ok</button>
 			</div>
 	
 	
-			<div id="clickGuard_container">
-				<div id="drag_container" class="roundCorners">
+			<div id="clickGuard_container" class="noSelect">
+				<div id="drag_container" class="roundCorners noSelect">
 					<div id="drag0" class="roundCorners drag noSelect"></div>
 					<div id="drag1" class="roundCorners drag noSelect"></div>
 					<div id="drag2" class="roundCorners drag noSelect"></div>
@@ -77,7 +77,7 @@
 		</div>
 
 		<div id="container_setDiv" class="roundCorners btn-group noSelect">
-			<div id="setDiv" class="roundCorners">
+			<div id="setDiv" class="roundCorner noSelects">
 				<div id="setTitle" class="bootstrapLabel btn_set noSelect">SET:</div>
 				<span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
 			</div> 
