--- a/Enabling_06_html/Enabling_06.html
+++ b/Enabling_06_html/Enabling_06.html
@@ -29,13 +29,15 @@
 		<script src="../common/js/jquery.mousewheel.min.js"></script>
 		<script src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
+
+                <script src="tooltip.js" type="text/javascript"></script>   	<!-- toolTip -->
 		<script src="Enabling_06.js"></script>
 	</head>
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
 
-		<h3 class="activity_hd"><!--Enabling 06--></h3>
-		<div class="activity_description"><!--Listen to each of the phrases and drag them to their correct location, matching both the order  <br /> and the person speaking, on the left and right of the screen.--></div>
+		<h3 class="activity_hd"></h3>
+		<div class="activity_description"></div>
 
 		<div id="flashAudioPlayerDiv"></div>
 		<div id="htmlAudioPlayerDiv"></div>
