--- a/Enabling_23_html/Enabling_23.html
+++ b/Enabling_23_html/Enabling_23.html
@@ -201,7 +201,7 @@
 							onMouseOver="MM_swapImage('playBtn_s1','','../common/Library/images/playBtn_s2.png',1)" > <img id='playBtn_s1' class="playBtn"  src="../common/Library/images/playBtn_s1.png" border="0"> </a>
 						</div>
 
-						<span class="dragBubbleText">One</span>
+						<div class="dragBubbleTextWrapper"><span class="dragBubbleText">One</span></div>
 					</div>
 				</div>
 			</div>
