--- a/Enabling_16_html/index.html
+++ b/Enabling_16_html/index.html
@@ -8,13 +8,18 @@
 	<script src="../common/js/xml2json.js"></script>
 	<script src="../common/js/dli_activity.js"></script>
 
+	<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+
 	<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 	<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 	<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
 	<script src="../common/js/dli_util.js"></script>
+
+	<script src="../common/js/jquery.mCustomScrollbar.js"></script>
+
     <script src="js/enabling_16.js"></script>
-        <script src="js/swfobject.js"></script>
+    <script src="js/swfobject.js"></script>
     <script src="js/audioPlayer.js"></script>
  
 
