--- a/gloss_GetThePoint/index.html
+++ b/gloss_GetThePoint/index.html
@@ -1,7 +1,20 @@
 <html>
 	<body>
-		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/al_ecn004.xml&stepIndex=11">Get The Point - SUM test</a><br />
-		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/ru_sci214.xml&stepIndex=2">Get The Point - LGP test</a><br />
-		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/al_env206.xml&stepIndex=10">Get The Point - VGP test</a><br />
+		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/al_ecn004.xml&stepIndex=11">Get The Point al_ecn004- SUM test</a><br />
+		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/ru_sci214.xml&stepIndex=2">Get The Point ru_sci214- LGP test</a><br />
+		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/ad_sec209.xml&stepIndex=6">Get The Point ad_sec209- LGP test</a><br />
+		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/al_env206.xml&stepIndex=10">Get The Point al_env206- VGP test</a><br />
+		
+		<br />
+		 
+		<h3>Links to Project_GLOSS directory content</h3>
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_cm_pol224/cm_pol224.xml&stepIndex=10&mediaPath=../Project_GLOSS/LO_cm_pol224/cm_pol224/">LO_cm_pol224- LGP test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_ru_geo212/ru_geo212.xml&stepIndex=5&mediaPath=../Project_GLOSS/LO_ru_geo212/ru_geo212/">LO_ru_geo212- LGP test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_kp_pol052/kp_pol052.xml&stepIndex=10&mediaPath=../Project_GLOSS/LO_kp_pol052/kp_pol052/">LO_kp_pol052- SUM test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&stepIndex=6&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_kp_env071/kp_env071.xml&mediaPath=../Project_GLOSS/LO_kp_env071/kp_env071/">LO_kp_pol052- SUM test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&stepIndex=10&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_ru_ecn017/ru_ecn017.xml&mediaPath=../Project_GLOSS/LO_ru_ecn017/ru_ecn017/">LO_ru_ecn017- SUM test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&stepIndex=11&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_sp_cul006/sp_cul006.xml&mediaPath=../Project_GLOSS/LO_sp_cul006/sp_cul006/">LO_sp_cul006- SUM test</a><br />
+		<a href="gloss_GetThePoint.html?audioVideoMediaDir=media/&stepIndex=11&disableSubDirectories=true&xmlFilename=../Project_GLOSS/LO_sp_pol219/sp_pol219.xml&mediaPath=../Project_GLOSS/LO_sp_pol219/sp_pol219/">LO_sp_pol219- VGP test</a><br />
+
 	</body>
 </html>
