WarmUp_07_html -Merged WarmUp_08 with WarmUp_07 -Added support for WarmUp_07a & WarmUp_08a

--- a/WarmUp_07_html/index.html
+++ b/WarmUp_07_html/index.html
@@ -2,8 +2,21 @@
 	<body>
 		<p>Note- WarmUp_08_html is also rolled into this activity</p>
 		
+		<h3>WarmUp_07 links</h3>
 		<a href="WarmUp_07.html">WarmUp 7</a><br />
 		<a href="WarmUp_07.html?disableHighlighting=true">WarmUp 7 - disableHighlighting</a><br />
 		<a href="WarmUp_07.html?xmlFilename=sampleData/WarmUp_07_Japanese_sampleData.xml">WarmUp 7 - Japanese</a><br />
+
+		<h3>WarmUp_08 links</h3>
+		<a href="WarmUp_07.html?mode=warmup_08&xmlFilename=sampleData/WarmUp_08_sampleData.xml">WarmUp 8- RTL</a><br />
+		<a href="WarmUp_07.html?mode=warmup_08&xmlFilename=sampleData/WarmUp_08_sampleData_english.xml">WarmUp 8- English</a><br />
+
+		<h3>WarmUp_07a links</h3>
+		<a href="WarmUp_07.html?mode=warmup_07a&xmlFilename=sampleData/WarmUp_07a_sampleData.xml">WarmUp 7a</a><br />
+		
+		<h3>WarmUp_08a links</h3>
+		<a href="WarmUp_07.html?mode=warmup_08a&xmlFilename=sampleData/WarmUp_08a_sampleData.xml">WarmUp 8a</a><br />
+		
+
 	</body>
 </html>
