WarmUp_08_html -Removed project, and replaced with a detour page to WarmUp_07_html.
WarmUp_07a_html & WarmUp_08a_html
-Created projects with detour pages.

--- a/WarmUp_08_html/index.html
+++ b/WarmUp_08_html/index.html
@@ -1,6 +1,6 @@
 <html>
 <body> 
-	<a href="WarmUp_08.html?mediaPath=sampleData/&xmlFilename=sampleData/WarmUp_08_sampleData.xml">WarmUp 8- RTL</a><br />
-	<a href="WarmUp_08.html?mediaPath=sampleData/&xmlFilename=sampleData/WarmUp_08_sampleData_english.xml">WarmUp 8- English</a><br />
+<p>Note  - WarmUp_08_html has been merged with WarmUp_07_html</p>
+<p>This project is essentially an empty place holder for WarmUp_08_html.</p>
 </body>
 </html>
