--- a/WarmUp_07_html/WarmUp_07.html
+++ b/WarmUp_07_html/WarmUp_07.html
@@ -16,6 +16,8 @@
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<!--<script type="text/javascript" src="jquery-1.10.1.js"></script>-->
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+		<script src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -83,5 +85,19 @@
 			<div id="htmlAudioPlayerDiv"></div>
 			<div id="embeddedAudioPlayerDiv"></div>
 		</div>
+		
+		<script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
+		<script>
+			(function($){
+				$(window).load(function(){
+					$("#idDesc").mCustomScrollbar({
+							////contentTouchScroll:false,     //// to make DragNdrop and mCustomscrollbar in a same box to be workable in an ipad (touch screen). Otherwise, DragNdrop doesn't work in an ipad.
+						advanced:{
+							updateOnContentResize:true     
+						}
+					});
+				});
+			})(jQuery);
+		</script>
 	</body>
 </html>
