--- a/Enabling_16_html/Enabling_16.html
+++ b/Enabling_16_html/Enabling_16.html
@@ -6,7 +6,7 @@
 	
 	<title>Enabling 16</title>
 	<script src="../common/js/xml2json.js"></script>
-	<script src="../common/js/dli_activity.js"></script>
+	<!-- <script src="../common/js/dli_activity.js"></script> -->
 
 	<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 	<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
