--- a/gloss_GetThePoint/index.html
+++ b/gloss_GetThePoint/index.html
@@ -2,6 +2,9 @@
 	<body>
 		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/rtlTest.xml&stepIndex=11">RTL test</a><br />
 		<br />
+
+		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/ru_sci214_audioTest.xml&stepIndex=2">Audio Test</a><br />
+		<br />
 		
 		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/al_ecn004.xml&stepIndex=11">Get The Point al_ecn004- SUM test</a><br />
 		<a href="gloss_GetThePoint.html?xmlFilename=sampleData/ru_sci214.xml&stepIndex=2">Get The Point ru_sci214- LGP test</a><br />
